--- a/public/back/less/index.less
+++ b/public/back/less/index.less
@@ -7,6 +7,7 @@
   top: 0;
   left: 0;
   z-index: 99;
+  transition: all 1s;
   h1{
     height: 50px;
     line-height: 50px;
@@ -53,11 +54,15 @@
       }
     }
   }
+  &.hidemenu{
+    left: -180px;
+  }
 }
 .tg_mian{
   padding-left: 180px;
   padding-top: 50px;
   height: 1000px;
+  transition: all 1s;
   .tg_topbar{
     height: 50px;
     width: 100%;
@@ -65,5 +70,25 @@
     position: fixed;
     top: 0;
     left: 0;
+    padding-left: 180px;
+    transition: all 1s;
+    a{
+      display: block;
+      width: 50px;
+      height: 50px;
+      color: @Color;
+      font-size: 20px;
+      line-height: 50px;
+      text-align: center;
+    }
+    &.hidemenu{
+      padding-left: 0px;
+    }
   }
+  &.hidemenu{
+    padding-left: 0px;
+  }
+}
+.red{
+  color: #A94442;
 }
