--- a/public/back/less/index.less
+++ b/public/back/less/index.less
@@ -1,94 +1,6 @@
-@import "variable";
-.tg_aside{
-  width: 180px;
-  height: 100%;
-  background-color: #222D32;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 99;
-  transition: all 1s;
-  h1{
-    height: 50px;
-    line-height: 50px;
-    font-size: 25px;
-    text-align: center;
-    background-color: #367FA9;
-    a{
-      color: @Color;
-    }
+.tg_content{
+  .echarts_1,.echarts_2{
+    width: 48%;
+    height: 400px;
   }
-  .user{
-    text-align: center;
-    width: 180px;
-    height: 180px;
-    padding-top: 30px;
-    img{
-      display: block;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      margin: 0 auto;
-    }
-    p{
-      font-size: 18px;
-      height: 40px;
-      line-height: 40px;
-      color: @Color;
-    }
-  }
-  .nav{
-    li{
-      a{
-        display: block;
-        height: 40px;
-        line-height: 40px;
-        color: @Color;
-        font-size: 14px;
-        padding-left: 40px;
-      }
-      .child{
-        a{
-          padding-left: 60px;
-        }
-      }
-    }
-  }
-  &.hidemenu{
-    left: -180px;
-  }
-}
-.tg_mian{
-  padding-left: 180px;
-  padding-top: 50px;
-  height: 1000px;
-  transition: all 1s;
-  .tg_topbar{
-    height: 50px;
-    width: 100%;
-    background-color: #3C8DBC;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding-left: 180px;
-    transition: all 1s;
-    a{
-      display: block;
-      width: 50px;
-      height: 50px;
-      color: @Color;
-      font-size: 20px;
-      line-height: 50px;
-      text-align: center;
-    }
-    &.hidemenu{
-      padding-left: 0px;
-    }
-  }
-  &.hidemenu{
-    padding-left: 0px;
-  }
-}
-.red{
-  color: #A94442;
 }
