--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -2,13 +2,18 @@
   margin: 0;
   padding: 0;
 }
-body {
+body,
+html {
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 ul,
 li {
   list-style: none;
+}
+img {
+  width: 100%;
 }
 .tg_container {
   width: 100%;
@@ -53,6 +58,11 @@ li {
   font-weight: normal;
   color: #fff;
   margin: 0;
+}
+.tg_container .tg_mian {
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 .tg_container .tg_footer {
   height: 55px;
