--- a/public/front/less/common.less
+++ b/public/front/less/common.less
@@ -2,12 +2,16 @@
   margin: 0;
   padding: 0;
 }
-body{
+body,html{
   width: 100%;
   height: 100%;
+  background-color: #fff;
 }
 ul,li{
   list-style: none;
+}
+img{
+  width: 100%;
 }
 .tg_container{
   width: 100%;
@@ -51,7 +55,11 @@ ul,li{
       margin: 0;
     }
   }
-  .tg_mian{}
+  .tg_mian{
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
   .tg_footer{
     height: 55px;
     width: 100%;
