--- a/public/front2/css/common.css
+++ b/public/front2/css/common.css
@@ -2,11 +2,20 @@ html, body {
   width: 100%;
   height: 100%;
 }
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+img {
+  display: block;
+  width: 100%;
+}
+
 
 .lt_container {
   width: 100%;
   height: 100%;
-  background-color: pink;
   min-width: 320px;
   max-width: 640px;
   margin: 0 auto;
@@ -51,10 +60,6 @@ html, body {
 }
 
 
-
-
-
-
 .lt_footer {
   position: absolute;
   left: 0;
@@ -63,9 +68,81 @@ html, body {
   width: 100%;
   background-color: #006699;
 }
+.lt_footer li {
+  float: left;
+  width: 25%;
+  height: 55px;
+  text-align: center;
+}
+.lt_footer li a {
+  color: #fff;
+  display: block;
+  padding-top: 8px;
+}
+
+.lt_footer li a p {
+  color: #fff;
+}
+.lt_footer li a.current {
+  color: orange;
+}
+.lt_footer li a.current p {
+  color: orange;
+}
+
+
+
 
 .lt_main {
   width: 100%;
   height: 100%;
-  background-color: skyblue;
+  background-color: #fff;
+  /* 注意: 由于mui区域滚动是通过定位实现的, 通过定位撑满的父容器 */
+  position: relative;
+}
+
+
+
+/* 公共的搜索框样式 */
+.lt_search {
+  padding: 10px;
+  position: relative;
+}
+.lt_search .search_input {
+  margin: 0;
+  height: 34px;
+  font-size: 12px;
+  padding-right: 54px;
+  border: 1px solid #007AFF;
+  border-radius: 5px;
+}
+.lt_search .search_btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 0 5px 5px 0;
+}
+
+
+/* 公用的产品样式 */
+.lt_product {
+  padding: 10px;
+}
+.lt_product li {
+  float: left;
+  width: 48%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding: 10px;
+  text-align: center;
+}
+.lt_product li:nth-child(2n+1) {
+  margin-right: 4%;
+}
+.lt_product li .price {
+  color: red;
+}
+.lt_product li .oldPrice {
+  text-decoration: line-through;
 }
