--- a/public/front/css/common.css
+++ b/public/front/css/common.css
@@ -64,6 +64,43 @@ img {
   width: 100%;
   height: 100%;
 }
+.tg_container .tg_mian .search {
+  position: relative;
+}
+.tg_container .tg_mian .search input {
+  border: 1px solid #2aabd2;
+  height: 40px;
+  line-height: 40px;
+  width: 100%;
+  border-radius: 5px;
+}
+.tg_container .tg_mian .search button {
+  width: 70px;
+  height: 42px;
+  font-size: 16px;
+  background-color: #2aabd2;
+  position: absolute;
+  right: 0px;
+  top: -1px;
+  border-radius: 0 5px 5px 0;
+}
+.tg_container .tg_mian .product {
+  padding: 10px;
+}
+.tg_container .tg_mian .product li {
+  width: 48%;
+  float: left;
+  margin-top: 4%;
+  border: 1px solid #ccc;
+  padding: 5px;
+  text-align: center;
+}
+.tg_container .tg_mian .product li:nth-child(2n-1) {
+  margin-right: 4%;
+}
+.tg_container .tg_mian .product li p span {
+  color: red;
+}
 .tg_container .tg_footer {
   height: 55px;
   width: 100%;
