--- a/public/front/less/common.less
+++ b/public/front/less/common.less
@@ -59,6 +59,46 @@ img{
     position: relative;
     width: 100%;
     height: 100%;
+    .search{
+      position: relative;
+      input{
+        border: 1px solid #2aabd2;
+        height: 40px;
+        line-height: 40px;
+        width: 100%;
+        border-radius: 5px;
+      }
+      button{
+        width: 70px;
+        height: 42px;
+        font-size: 16px;
+        background-color: #2aabd2;
+        position: absolute;
+        right: 0px;
+        top: -1px;
+        border-radius:0 5px 5px 0;
+      }
+    }
+    .product{
+      padding: 10px;
+      li{
+        width: 48%;
+        float: left;
+        margin-top: 4%;
+        border: 1px solid #ccc;
+        padding: 5px;
+        text-align: center;
+        &:nth-child(2n-1){
+          margin-right: 4%;
+        }
+        p{
+          span{
+            color: red;
+          }
+        }
+      }
+
+    }
   }
   .tg_footer{
     height: 55px;
