--- a/public/front/css/searchList.css
+++ b/public/front/css/searchList.css
@@ -1,3 +1,43 @@
 .tg_mian {
   padding: 10px;
 }
+.tg_mian .search {
+  margin-top: 10px;
+}
+.tg_mian .sort {
+  background-color: #EEEEEE;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+.tg_mian .sort a {
+  display: block;
+  width: 25%;
+  float: left;
+  font-size: 14px;
+  color: #666;
+}
+.tg_mian .sort a.current {
+  color: #FF8C00;
+}
+.tg_mian .product {
+  position: relative;
+}
+.tg_mian .product .loading {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #2aabd2;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 150px;
+  animation: rotate 1s infinite ease-in-out;
+}
+@keyframes rotate {
+  from {
+    transform: translateX(-50%) rotate(0deg);
+  }
+  to {
+    transform: translateX(-50%) rotate(720deg);
+  }
+}
