--- a/public/front/less/searchList.less
+++ b/public/front/less/searchList.less
@@ -1,3 +1,43 @@
 .tg_mian{
   padding: 10px;
+  .search{
+    margin-top: 10px;
+  }
+  .sort{
+    background-color: #EEEEEE;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    a{
+      display: block;
+      width: 25%;
+      float: left;
+      font-size: 14px;
+      color: #666;
+      &.current{
+        color: #FF8C00;
+      }
+    }
+  }
+  .product{
+    position: relative;
+    .loading{
+      width: 50px;
+      height: 50px;
+      border: 3px solid #2aabd2;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 150px;
+      animation: rotate 1s infinite ease-in-out;
+    }
+    @keyframes rotate {
+      from{
+        transform: translateX(-50%) rotate(0deg);
+      }
+      to{
+        transform: translateX(-50%) rotate(720deg);
+      }
+    }
+  }
 }
