--- a/public/front/less/product.less
+++ b/public/front/less/product.less
@@ -31,6 +31,10 @@
         margin: 3px 0;
         border: @xian;
         font-size: 15px;
+        &.current{
+          background-color: orange;
+          color: #fff
+        }
       }
     }
     .number{
