--- a/public/front/less/cart.less
+++ b/public/front/less/cart.less
@@ -32,3 +32,17 @@
     text-align: left;
   }
 }
+.lt_size{
+  span{
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    text-align: center;
+    line-height: 25px;
+    border: 1px solid #ccc;
+    &.current{
+      background-color: orange;
+      color: #fff;
+    }
+  }
+}
