--- a/public/front/less/category.less
+++ b/public/front/less/category.less
@@ -1,3 +1,6 @@
+body{
+  background-color: #efeff4;
+}
 .tg_mian{
   .category_left{
     width: 90px;
@@ -7,12 +10,47 @@
     li{
       width: 90px;
       height: 50px;
+
+      a{
+        display: block;
+        width: 90px;
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        background-color: #E3E4E5;
+        border-right: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        &.current{
+          background-color: #fff;
+          border-right: none;
+        }
+      }
     }
   }
   .category_right{
     height: 100%;
-    background-color: pink;
     overflow: hidden;
-
+    position: relative;
+    li{
+      float: left;
+      width: 33.3%;
+      a{
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        img{
+          width: 70px;
+          height: 50px;
+          margin: 0 auto;
+        }
+        p{
+          text-align: center;
+        }
+      }
+    }
   }
+}
+.tips {
+  padding: 10px;
 }
